--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-csv出力コマンドが無いらしい、というのと、サードパーティーのソフトでは100万行も出力させようとすると
-アプリケーション毎落ちてしまう事が頻発したのでcsv出力用のプログラムを作ることにしました。
+csv出力コマンドが無いらしい、というのと、サードパーティーのソフトでは100万行ほど出力させようとするとアプリケーションごと落ちてしまう事が頻発したので、csv出力用のプログラムを作ることにしました。
+
